--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for emis-be on 2025-05-21T16:16:11Z
+# fly.toml app configuration file generated for emis-be-i2qxaa on 2025-05-21T18:02:18Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'emis-be'
-primary_region = 'sin'
+app = 'emis-be-i2qxaa'
+primary_region = 'iad'
 
 [build]
 
