--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^5.1.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
+    "fly": "^4.6.16",
     "mongoose": "^8.15.0",
     "nodemon": "^3.1.10"
   }
