--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "express-mongo-sanitize": "^2.2.0",
     "mongoose": "^8.15.0",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10"
   }
 }
